# odas_ros

./: CMakeLists.txt  package.xml
launch/: core.launch  example.launch  mics.yaml  source.launch  whippet.launch  whippet_mics.yaml  xmos_mics.yaml  xmos_tracking.launch
msg/: hop.msg  pot.msg  spectra.msg  track.msg
odas_ros/odas_ros/launch/: odas.launch  odasNoServer.launch
odas_ros/odas_ros/odas/config/: kinect.cfg
src/: msg_synchroniser.cpp  msg_synchroniser.h  ros_parameters_parser.cpp  ros_parameters_parser.h
src/module/: mod_mapping.cpp  mod_resample.cpp  mod_ssl.cpp  mod_sspf.cpp  mod_sss.cpp  mod_sst.cpp  mod_stft.cpp
src/sink/: snk_hops_file.cpp  snk_pots_file.cpp  snk_pots_renard.cpp  snk_pots_socket.cpp  snk_spectra_file.cpp  snk_tracks_file.cpp
src/source/: src_hops_file.cpp  src_hops_soundcard.cpp  src_soundcard.cpp  src_spectra_file.cpp
